--- a/README.rdoc
+++ b/README.rdoc
@@ -1,14 +1,6 @@
 
-This is a classroom exercise to play Rock Paper Scissors.
+This is the completion of the Project Euler practice problems
+in order to get more experience with writing logic.
 
-Usage:
-    $ irb -I'./lib' -r'tournament'
-    > tournament = Tournament.new
-      => #<Tournament:0x007fba2b9f89d0 @players=[], @rounds=[]>
-    > tournament.play(true)
-    Round #0:            ScissorsPlayer vs.               PaperPlayer... WINNER:            ScissorsPlayer
-    Round #1:                RockPlayer vs.                     NoOne... WINNER:                RockPlayer
-    Round #2:            ScissorsPlayer vs.                RockPlayer... WINNER:                RockPlayer
-      => #<RockPlayer:0x007fba2b9e2e28>
-    >
+http://projecteuler.net/problems
 
